@startuml

title __PIERRESABRE's Class Diagram__\n

  namespace histoire {
    class histoire.HistoireTP4 {
    }
  }
  

  namespace histoire {
    class histoire.HistoireTP5 {
    }
  }
  

  namespace personnages {
    class personnages.Commercant {
    }
  }
  

  namespace personnages {
    class personnages.Humain {
    }
  }
  

  namespace personnages {
    class personnages.Ronin {
    }
  }
  

  namespace personnages {
    class personnages.Samourai {
    }
  }
  

  namespace personnages {
    class personnages.Traitre {
    }
  }
  

  namespace personnages {
    class personnages.Yakuza {
    }
  }
  

  personnages.Commercant -up-|> personnages.Humain
  personnages.Ronin -up-|> personnages.Humain
  personnages.Samourai -up-|> personnages.Humain
  personnages.Traitre -up-|> personnages.Humain
  personnages.Yakuza -up-|> personnages.Humain


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
